--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "express-xss-sanitizer": "^1.1.9",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.10",
