--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "express-xss-sanitizer": "^1.1.9",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
